Fix colour contrast of form elements.

--- a/react_ws_src/src/sass/_mixins.scss
+++ b/react_ws_src/src/sass/_mixins.scss
@@ -43,7 +43,7 @@
   border-radius: 7px;
   border:none;
   padding:0 18px;
-  color: #888888;
+  color: #666666;
   font-style: italic;
   @include font-size(18px);
   font-weight: 300;
