--- a/react_ws_src/src/sass/ttt.scss
+++ b/react_ws_src/src/sass/ttt.scss
@@ -46,7 +46,7 @@ section#TTT_game{
 		  background:#fff;
 		  border: 1px solid #ebe6f1;
 		  box-shadow:0px 4px 0px 0px #ebe6f1;
-		  color: #888888;
+		  color: #666666;
 		  font-style: italic;
 		  @include font-size(18px);
 		  font-weight: 300;
